--- a/notebooks/credit_risk_assessment.ipynb
+++ b/notebooks/credit_risk_assessment.ipynb
@@ -13,6 +13,10 @@
     "**Email:** jamiubadmus001@gmail.com  \n",
     "**Date:** February 2026\n",
     "\n",
+    "[![GitHub](https://img.shields.io/badge/GitHub-jamiubadmusng-181717?style=flat&logo=github)](https://github.com/jamiubadmusng)\n",
+    "[![LinkedIn](https://img.shields.io/badge/LinkedIn-Jamiu%20Badmus-0077B5?style=flat&logo=linkedin)](https://www.linkedin.com/in/jamiu-olamilekan-badmus-9276a8192/)\n",
+    "[![Website](https://img.shields.io/badge/Website-jamiubadmus.com-FF5722?style=flat&logo=google-chrome)](https://jamiubadmus.com)\n",
+    "\n",
     "---\n",
     "\n",
     "## Executive Summary\n",
